force-app/main/default/objects/dlrs__LookupParent__c/dlrs__LookupParent__c.object-meta.xml
<CustomObject>
    <label>Lookup Parent</label>
    <nameField>
        <label>Lookup Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Parents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>