force-app/main/default/objects/dlrs__LookupParent__c/fields/dlrs__Colours__c.field-meta.xml
<CustomField>
    <fullName>dlrs__Colours__c</fullName>
    <label>Colours</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>