force-app/main/default/objects/dlrs__LookupParent__c/fields/dlrs__Descriptions2__c.field-meta.xml
<CustomField>
    <fullName>dlrs__Descriptions2__c</fullName>
    <label>Descriptions 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>