force-app/main/default/objects/dlrs__LookupParent__c/fields/dlrs__Total__c.field-meta.xml
<CustomField>
    <fullName>dlrs__Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>